assets/styles/main.css
/* Font */
/* @import url('https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;600;700&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');


/* Reset */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Reset End */

/* Constants */
:root {
    --clr-primary: #E3C871;
    --clr-secondary: #B3B3B3;
}



/* Basic */
*, *::after, *::before {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    font-family: 'Lato', sans-serif;
    scroll-padding-top: 50px;
    font-size: 10px;
}

body {
    background-color: #efffff;
    color: #000;
    font-size: 1.8rem;
    line-height: 1.5;
    font-weight: 400;
    position: relative;
}

a {
    text-decoration: none;
    color: white;
}

img {
    width: 100%;
}


h1, h2, h3, h4, h5 {
    font-family: 'Bebas Neue', sans-serif;
    line-height: 1.2;
}

/* End Basic */


/* Scroll Snapping */
.scrollc {
    /* scroll-snap-type: y mandatory; */
    max-height: 100vh;
    overflow-y: scroll;
    /* scroll-snap-duration: 1s; */

}

.scroll {
    /* scroll-snap-align: start; */
}


/* Hero Start */

.header nav {
    position: fixed;
    top: 0;
    padding: 2rem;
    z-index: 999;
}

.header__logo_img {
    max-height: 6rem;
}

.hero {
    position: relative;
    min-height: calc(100vh);
    overflow: hidden;
}

.hero__description {
    display: grid;
    /* grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(4, 1fr); */
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding-block: 10rem;

    /* font-weight: 400; */
    font-size: 8rem;
    letter-spacing: 3rem;
    text-transform: uppercase;
    z-index: 999;

    background: #D4C611;
    background: linear-gradient(to bottom right, #D4C611 0%, #82AB78 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.hero__description span {
    display: block;
}

/* 
.hero__description .first_block_one {
    grid-column-start: 2;
    grid-row-start: 1;
}

.hero__description .first_block_two {
    grid-column-start: 2;
    grid-row-start: 2;

}
*/
.hero__description .second_block_one {
    /* grid-column-start: 4;
    grid-row-start: 3;
    letter-spacing: 3rem;
    margin-top: 2rem;
    margin-left: -12rem; */
    font-size: 4rem;


}

.hero__description .second_block_two {
    /* grid-column-start: 4;
    grid-row-start: 4; */
    font-size: 12rem;
    /* color: rgb(214, 214, 84); */

}


.hero__figure_img, .circle {
    position: absolute;
    right: 0;
    bottom: -2rem;
    object-fit: contain;
    width: 35vw;
    z-index: -1;
}

.circle {
    position: fixed;
    transition: all 100ms ease-in-out;
    background-color: #AFE1AF;
    width: 50vw;
    aspect-ratio: 1;
    border-radius: 50%;
    right: -10%;
    bottom: -10vh;
}


/* Hero End */

/* Profile Start */

.about_instructor {
    display: flex;
    gap: 4rem;

    padding: 8rem 35rem 4rem 20rem;
}

.about_instructor .instructor__img {
    border-radius: 2rem;
    height: 100%;
    object-fit: cover;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
}

.about_instructor .biography {
    /* padding-right: 20rem; */
}

.about_instructor .biography h2 {
    display: inline-block;
    font-size: 4rem;
    color: rgb(8, 8, 58);
    margin-bottom: 4rem;
}

.about_instructor .biography p {
    font-size: 2rem;
    margin-bottom: 2rem;
}

.about_instructor .biography p span {
    border-bottom: 4px solid yellow;
}


/* Profile End */


/* Services Start */
.services_section {
    padding: 10rem 20rem;
}

.services_section h2 {
    /* text-align: center; */
    font-size: 5rem;
    margin-bottom: 4rem;
}

.services {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 4rem;

}

.service {
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 2rem;
    padding: 3.5rem 2rem;
    border-radius: 2rem;
    background-color: #efffff;
    transition: all 300ms ease-in-out;
    box-shadow: rgba(175, 225, 175, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
    cursor: pointer;
}

.service:hover {
    box-shadow: rgba(175, 225, 175, 0.4) -5px 5px, rgba(175, 225, 175, 0.3) -10px 10px, rgba(175, 225, 175, 0.2) -15px 15px, rgba(175, 225, 175, 0.1) -20px 20px, rgba(175, 225, 175, 0.05) -25px 25px;

}

.service img {
    border-radius: 1.25rem;

}

.service_description h3 {
    font-size: 2rem;
    margin-bottom: 2rem;
}

.service_description h3 span {
    display: inline;
    padding: 2px 1rem;
    line-height: 0;
    top: -2rem;
    background-color: #f7e8ba;
    margin-left: 0.5rem;
    border: 1px solid yellow;
    border-radius: 0.5rem;
    font-size: 1rem;
}

.service_description p {
    font-size: 1.5rem;
}

/* Services End */


#google_form {
    height: 3300px;
}

@media screen and (max-width: 860px) {
    .header nav {
        background-color: #efffff;
        width: 100%;
        padding: 1rem;
        text-align: center;
        box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
    }

    .header__logo_img {
        max-height: 4rem;
    }

    .hero__description {
        min-height: 100vh;
        align-items: end;
        /* gap: 1rem; */
        justify-content: center;
        padding-block-end: 25rem;

        font-size: 4rem;
        letter-spacing: 3rem;
        text-transform: uppercase;
        z-index: 990;
    }

    .hero__description span {
        display: flex;
        justify-content: center;
        min-width: 100%;
        line-height: 1;
    }

    .hero__description .second_block_two {
        font-size: 10rem;

    }

    .hero__figure_img {
        right: 50%;
        transform: translateX(50%);
        width: 80vw;

    }

    .hero__figure_img, .circle {
        width: 100vw;
    }

    .about_instructor {
        flex-direction: column-reverse;
        padding: 4rem;
    }

    .services_section {
        padding: 4rem;
    }

    .services {
        grid-template-columns: 1fr;
    }

    .service {
        grid-template-columns: 1fr;
        gap: 1rem;

    }

    #google_form {
        height: 3900px;
    }
}

@media screen and (min-width: 680px) and (max-width: 860px) {
    
    .services {
        grid-template-columns: 1fr 1fr;
    }
    #google_form {
        height: 3300px;
    }

}

